<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.cmartinezs.keygo</groupId>
    <artifactId>keygo-server</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>KeyGo Server</name>
    <description>Enterprise authentication service - open source alternative for centralized identity, user and access management / Servicio de autenticación empresarial - alternativa open source para gestión centralizada de identidad, usuarios y accesos</description>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
            <distribution>repo</distribution>
            <comments>AGPL-3.0 con términos comerciales adicionales - Ver LICENSE</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>cmartinezs</id>
            <name>Carlos Martínez</name>
            <url>https://github.com/cmartinezs</url>
        </developer>
    </developers>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <flyway.version>11.20.3</flyway.version>
        <!-- SpringDoc OpenAPI -->
        <springdoc.version>3.0.1</springdoc.version>
        <!-- JaCoCo -->
        <jacoco.version>0.8.12</jacoco.version>
        <jacoco.skip>false</jacoco.skip>
        <jacoco.minimum.coverage>0.60</jacoco.minimum.coverage>
        <!-- Checkstyle (aligned with google-java-format) -->
        <checkstyle.version>10.23.0</checkstyle.version>
    </properties>

    <modules>
        <module>keygo-common</module>
        <module>keygo-domain</module>
        <module>keygo-app</module>
        <module>keygo-infra</module>
        <module>keygo-api</module>
        <module>keygo-run</module>
        <module>keygo-bom</module>
        <module>keygo-supabase</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.5.0</version>
                    <configuration>
                        <rules>
                            <requireJavaVersion>
                                <version>[21,)</version>
                                <message>This project requires Java 21 or higher.</message>
                            </requireJavaVersion>
                            <requireMavenVersion>
                                <version>[3.9,)</version>
                                <message>This project requires Maven 3.9 or higher.</message>
                            </requireMavenVersion>
                            <requireProperty>
                                <property>project.build.sourceEncoding</property>
                                <regex>UTF-8</regex>
                                <message>Source encoding must be UTF-8.</message>
                            </requireProperty>
                            <banDuplicatePomDependencyVersions/>
                        </rules>
                        <fail>true</fail>
                    </configuration>
                    <executions>
                        <execution>
                            <id>enforce-build-environment</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <phase>validate</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <configuration>
                        <skip>${jacoco.skip}</skip>
                        <!--
                          Clases excluidas del reporte y del check de cobertura.
                          Formato: ruta del .class con wildcards (NO nombre Java).
                          Aplica a: report, report-aggregate y check.
                        -->
                        <excludes>
                            <exclude>**/*Application.class</exclude>
                            <exclude>**/*Config.class</exclude>
                            <exclude>**/*Properties.class</exclude>
                            <exclude>**/*Entity.class</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <!-- 1) Inicia el agente JaCoCo antes de los tests -->
                        <execution>
                            <id>jacoco-prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <!-- 2) Genera reporte HTML/XML tras los tests -->
                        <execution>
                            <id>jacoco-report</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                        <!-- 3) Verifica umbrales mínimos de cobertura -->
                        <execution>
                            <id>jacoco-check</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <rule>
                                        <element>BUNDLE</element>
                                        <limits>
                                            <limit>
                                                <counter>INSTRUCTION</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>${jacoco.minimum.coverage}</minimum>
                                            </limit>
                                        </limits>
                                    </rule>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <!-- Checkstyle: Code style validation (aligned with google-java-format) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.6.0</version>
                    <configuration>
                        <configLocation>config/checkstyle/checkstyle.xml</configLocation>
                        <sourceDirectories>${project.compileSourceRoots}</sourceDirectories>
                        <testSourceDirectories>${project.testCompileSourceRoots}</testSourceDirectories>
                        <!-- Do not fail build on violations (warnings only) -->
                        <failOnViolation>false</failOnViolation>
                        <logViolationsToConsole>true</logViolationsToConsole>
                        <consoleOutput>true</consoleOutput>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${checkstyle.version}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>checkstyle-check</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>

